--- a/main.tex
+++ b/main.tex
@@ -144,6 +144,16 @@ This additional structure is crucial to reconcile the context extension operatio
 In section \ref{sec:applications} we show that the cwf structure on $(\operatorname{Coa} \mathrm{sLcc})^\mathrm{op}$ can be used to rectify Seely's original interpretation in a given lcc category $\mathcal{C}$.
 This is done by choosing an equivalent lcc category $\Gamma \simeq \mathcal{C}$ with $\Gamma \in \operatorname{Ob} \, (\operatorname{Coa} \mathrm{sLcc})$, and then $\Gamma$ inherits cwf structure from the core of the slice cwf $(\operatorname{Coa} \mathrm{sLcc})^\mathrm{op}_{ / \Gamma}$.
 
+\textbf{Acknowledgements.}
+This paper benefited significantly from input by members of the research community.
+I would like to thank the organizers of the TYPES workshop 2019 and the HoTT conference 2019 for giving me the opportunity to speak about preliminary versions of the material in this paper.
+Conversations with Emily Riehl, Karol Szumiło and David White made me aware that my construction could be phrased model categorically; I believe this significantly improved the presentation.
+Daniel Gratzer pointed out to me the biuniversal property of slice categories.
+Valery Isaev explained to me some aspects of the model category structure on marked objects.
+Bas Spitters provided invaluable advice and enabled me to work on this paper.
+
+\todo{AFOSR blurp.}
+
 \section{Lcc sketches}
 \label{sec:lcc-sketches}
 
@@ -1371,9 +1381,6 @@ Such a theorem, however, is beyond the scope of the present paper.
 % A further direction for future research could be an adaptation of our technique to interpretations of intensional type theories in quasi-categories, where some coherence problems are currently still unresolved.
 % The main difficulty here is that presentations of a quasi-category in terms of a 1-category are often quite hard to work with if the quasi-category is not cocomplete and hence model category theory is not directly applicable.
 % While the intended quasi-categories are not always cocomplete, using our technique we can still work with a very well-behaved combinatorial model category by considering all such quasi-categories at once.
-
-\textbf{Acknowledgements} \todo{todo}
-
 
 \bibliographystyle{alpha}
 
